style.css
/*-------------Global Styles-------------*/

:root {
    /*Font Size Colors*/
    --black-bg: hsl(0, 0%, 8%); /*hsl is better practice to change dark/light*/
    --dark-grey-bg: hsl(0, 0%, 14%);
    --green-accent: hsl(153, 71%, 59%);
    --white-main-text: hsl(0, 0%, 100%); /*text-1*/
    --gray-text: hsl(0, 0%, 85%); /*text-2*/
    --red-invalid: hsl(7, 100%, 68%);
    /*Font Size Variables*/
    --fs-18: 1.125rem; /*font size ratios will adjust based on browser font*/ 
    --fs-88: 5.5rem; /*XL Heading*/
    --fs-72: 4.5rem; 
    --fs-40: 2.5rem; /*Mobile XL Heading*/
    --fs-48: 3rem; /*Large Heading*/
    --fs-32: 2rem; /*Mobile Large Heading*/
    --fs-24: 1.5rem;
    --container: 69.375rem; /*1110px divided by 16px auto size*/
    --transition: 250ms ease-in-out;
}

html {
    box-sizing: border-box; /*so that padding doesn't add width or height to the elements*/
    font-size: 100; /*takes browser based font styles*/
}

*, *::before, *::after{
    box-sizing: inherit;
}

body {
    margin: 0;
    font-family: 'Space Grotesk', sans-serif;
    background-color: var(--black-bg);
    color: var(--white-main-text);
    font-size: var(--fs-18);
    line-height: 1.56;
    padding-bottom: 30rem; /*let's us scroll down to test*/
}

h1, h2, h3, p{
    margin-top: 0;
}

h1, h2, h3 {
    line-height: 1;
}

h1 {
    font-size: 2.5rem;
    font-size: clamp(2.5rem, 0.7rem + 7.68vw, 5.5rem);
}

p {
    font-size: 1rem;
    font-size: clamp(1rem, 0.79rem + 0.89vw, 1.125rem);
    line-height: 1.5;
    color: var(--gray-text);
}

a {
    transition: color var(--transition);
}

a.underline { /*class for the anchor tag*/
    display: inline-block;
    font-size: 1rem; 
    line-height: 1.625rem; /*26px*/
    letter-spacing: 2.29px;
    font-weight: 700;
    text-transform: uppercase;
    color: var(--white-main-text);
    text-decoration: none;
    background-image: linear-gradient(to right, var(--green-accent) 75%, var(--green-accent) 75%);
    background-position: 0 2.1em; /*10px between letters and underline*/
    background-repeat: repeat-x;
    background-size: 8px 2px;
    padding-bottom: 0.625rem;
}

a:hover {
    color: var(--green-accent);
}

.visuallyHidden { /*https://www.accessibility-developer-guide.com/examples/hiding-elements/visually/*/
    position: absolute;
    left:     -10000px;
    top:      auto;
    width:    1px;
    height:   1px;
    overflow: hidden;
}

.wrapper {
    width: calc(100% - 2rem); /*16 px margins on either size for mobile width*/
    max-width: var(--container);
    margin-inline: auto; /*centering*/
}

@media (min-width: 37.5em) {
    /*switching from mobile size to tablet passing 600px, use ems for break points in case broswer-based font-size was changed*/
    .wrapper {
        width: calc(100% - 3.75rem);
    }
}

/*-------------Header-------------*/
.header{
    margin-top: 20px; /*use rem mostly for text, px is okay for smaller stuff that doesn't need to scale*/
    position: relative;
    z-index: 1;
}

.headerNav{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
    gap: 20px 25px; /*row and column gap by flex*/
}

.headerHome {
    /*https://royalfig.github.io/fluid-typography-calculator/*/
    font-size: 1.5rem;
    font-size: clamp(1.5rem, 1.02rem + 2.04vw, 2rem);
    color: var(--white-main-text);
    text-decoration: none;
    flex: 1 0 100%;
}

.headerSocial svg { /*Inline block so that there's no underline next to icon hover*/
    display: block;
    /*outline: 2px solid red; //checking placement of icons, use outline instead of border because border adds to the size of the image*/
}

.headerSocial path {
    transition: fill var(--transition);
}

.headerSocial:hover path { /*svg:hover path OR a:hover > svg > path*/
    fill: var(--green-accent);
}

@media (min-width: 37.5em) {
    .header{
        margin-top: 30px;
        margin-bottom: 90px;
    }
    .headerNav{
        justify-content: flex-start;
        align-items: center;
        text-align: left;
        gap: 32px;
    }

    .headerHome{
        flex: 1;
        margin-inline-end: auto;
    }
}

@media (min-width:62.5em){
    .header{
        margin-bottom: 127px;
    }
}

/*-------------HERO-------------*/

.hero{
}

.heroWrapper {
    /*display: flow-root;*/
    padding-bottom: 80px;
    border-bottom: 1px solid var(--gray-text);
}

.heroImage {
    position: absolute;
    top:0;
    left: 50%; /*move it 50% to left from where it was originally*/
    translate: -50%; 
    /* outline: 1px solid lime; */
    /* margin-inline: auto; */
    display: block;
    width: 12rem;
    height: auto;
}

.heroRings{
    position: absolute;
    top: 100px; /*6.25rem;*/
    right: 15%;
    z-index: -1; /*move image behind profile picture*/
    /* width: 33.125rem;
    height: auto; */
}

.heroCircle{
    position: absolute;
    top: 254px; /*15.875rem;*/
    right: 0;
    translate: 50%; /*DYNAMIC*/
    /* width: 8.0625rem;
    height: 8.0625rem; */
    /*right: -64.5px;*/
}

.heroText {
    position: relative;
    text-align: center; 
    /* margin-top: 18.9375rem; use margin-top instead of top so that the text in the other class/divider isn't affected */
    margin-top: 303px;
}

.heroHeadline {
    margin-bottom: 24px;
}

.heroHeadline > br {
    display: none;
}

h1 > span { /*Underline accent!*/
    background-image: linear-gradient(to right, var(--green-accent) 75%, var(--green-accent) 75%);
    background-position: 0 1.18em;
    background-repeat: repeat-x;
    background-size: 8px 4px;
}

.heroDescription {
    margin-bottom: 24px;
}

.heroContact {

}

@media (min-width: 37.5em){ /*Tablet*/
    .heroWrapper {
        padding-bottom: 60px;
    }
    
    .heroImage{
        width: 322px;
        height: auto;
        left: auto;
        right: 0;
        translate: 0;
    }

    .heroCircle{
        top: 370px; 
    }

    .heroRings{
        top: 80px;
        translate: -30%;
    }

    .heroText{
        width: 62vw; 
        margin-top: 0;
        text-align: left;
    }

    .heroHeadline {
        margin-bottom: 60px;
    }

    .heroHeadline > br {
        display: inline-block;
    }

    .heroDescription {
        margin-bottom: 34px;
    }
}

@media (min-width: 62.5em){ /*Desktop*/
    .heroWrapper{
        position: relative;
    }
    
    .heroHeadline {
        margin-bottom: 43px;
    }

    .heroImage {
        width: 400px;
        /* Moving image up so that it's flush against top */
        translate: 0 -200px;
    }
    
    .heroHeadline > br {
        display: none;
    }

    .heroDescription {
        margin-bottom: 66px;
    }
}

